--- a/neuron_representation.ipynb
+++ b/neuron_representation.ipynb
@@ -54,13 +54,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a Nengo Model to represent (i.e. Encode) Input Data\n",
+    "## Represent (i.e. Encode) Input Data using One Neuron\n",
     "\n",
     "To do anything with data in Nengo, we must first convert the input data into spiking data using Nengo neuron ensembles. This is biologically inspired: neural populations represent time-varying signals through their spiking responses.\n",
     "\n",
     "We start with a Nengo node (or nodes) that provide the input to a neuron (or neurons) in our Nengo model - this is essentially just a way to pass data from regular Python into a Nengo model filled with neurons. The input node(s) will then be connected to Nengo neuron(s) that convert the data to spikes (i.e. encode the data).\n",
     "\n",
     "To understand how Nengo neurons encode inputs, let's look at a single neuron encoding a constant value:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adjust these sections. \n",
+    "- Might break down the code into multiple parts?\n",
+    "- Show neuron representation\n",
+    "- Show spikes and membrane potential\n",
+    "- Show tuning curves\n",
+    "- Decode manually\n",
+    "- Adjust parameters"
    ]
   },
   {
@@ -303,6 +316,19 @@
    "metadata": {},
    "source": [
     "**Before we move on, try hand tuning the parameters and see if you can get a single neuron to better represent one of your input values. Possibly then try representing a different value and consider why it doesn't do as well as the first one you tuned (or maybe it does better?). Play with it!**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Represent (i.e. Encode) Input Data using Ten Neurons\n",
+    "\n",
+    "To do anything with data in Nengo, we must first convert the input data into spiking data using Nengo neuron ensembles. This is biologically inspired: neural populations represent time-varying signals through their spiking responses.\n",
+    "\n",
+    "We start with a Nengo node (or nodes) that provide the input to a neuron (or neurons) in our Nengo model - this is essentially just a way to pass data from regular Python into a Nengo model filled with neurons. The input node(s) will then be connected to Nengo neuron(s) that convert the data to spikes (i.e. encode the data).\n",
+    "\n",
+    "To understand how Nengo neurons encode inputs, let's look at a single neuron encoding a constant value:"
    ]
   },
   {
